# stm32-cmake-general

./: .clang-format  .gitmodules
.devcontainer/: Dockerfile  devcontainer.json
examples/blinky/: CMakeLists.txt  blinky.c  blinky.cpp
examples/hello_world/: CMakeLists.txt
examples/hello_world/inc/: HelloWorld.hpp
examples/hello_world/src/: HelloWorld.cpp  main.cpp
examples/sockets/: CMakeLists.txt
examples/sockets/inc/: Client.hpp  Server.hpp
examples/sockets/src/: BasicClient_main.cpp  BasicServer_main.cpp  Client.cpp  Client_main.cpp  Server.cpp  Server_main.cpp
